--- a/css/halo.css
+++ b/css/halo.css
@@ -1,6 +1,6 @@
 #gridContainer {height:100%; display:flex; flex-direction:column; padding:20px; counter-reset:chapter-group 0}
-#gridContainer .group {flex:1 1 auto; display:flex; align-items:baseline; flex-flow:row wrap; gap:4px; padding:0 0 0 150px; margin:1px; position:relative; border-bottom:1px solid #000}
+#gridContainer .group {display:flex; align-items:baseline; flex-flow:row wrap; gap:4px; padding:0 0 0 150px; margin:1px; position:relative; border-bottom:1px solid #000}
 #gridContainer .group::before {counter-increment:chapter-group; content:counter(chapter-group); position:absolute; top:4px; left:4px; font-size:20px}
-#gridContainer .group .cell {width:30%;  position:relative; background-color: #65abd5; color: #1c6490}
+#gridContainer .group .cell {width:30%; position:relative; background-color: #65abd5; color: #1c6490}
 #gridContainer .group .cell::before {content:''; padding-top:100%; display:block;}
 #gridContainer .group .cell .box {position:absolute; top:0; bottom:0; left:0; right:0}
